Tech/reorg debug properties (#3)
* Repackging + Correction globales. Modification Cache, SelectorCache et Thread légers JDK 17 au lieu de threads standard

* Correctif de compilation sur amélioration de l'interface de Repository du domaine

* Ajout TraceController pour vérifier le statut d'exécution des workers.
Ajout domaine métier : INS et traitement prénoms
Ajout configuration : powershell pour rappatrier la bdd thesorimed

* Réorganisation des erreurs, des tests, des ports de Patient. Meilleur séparation

* Gestion flyway + Réorganisation complète des packages

* OpenBao Connexion + Correctifs TI et TU patient/ordonnance

* PDF Storage + TU Flyway

* Correction PDF et Flyway

---------

Co-authored-by: nletteron <nicolas.letteron-ext@assurance-maladie.fr>